--- a/Wzic/Wzic/bin/Wzic.dll.config
+++ b/Wzic/Wzic/bin/Wzic.dll.config
@@ -79,7 +79,7 @@
   <connectionStrings>
     <add name="WzicEntities2" connectionString="metadata=res://*/Models.WizOfDatabase.csdl|res://*/Models.WizOfDatabase.ssdl|res://*/Models.WizOfDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KB27OXZ32OUZGIN\SQLEXPRESS;initial catalog=Wzic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection"
-   connectionString="Data Source=KB27OXZ32OUZGIN\SQLEXPRESS;Initial Catalog=accountWzic;Integrated Security=True"
+   connectionString="Data Source=KB27OXZ32OUZGIN\SQLEXPRESS;Initial Catalog=Wzic;Integrated Security=True"
    providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.data>
